Images And Primary color

--- a/src/assets/scss/config/default/_variables.scss
+++ b/src/assets/scss/config/default/_variables.scss
@@ -62,7 +62,7 @@ $grays: (
 
 // scss-docs-start color-variables
 $blue:       #3577f1;
-$indigo:     #4B9A6D;
+$indigo:     #009fe3;
 $purple:     #6559cc;
 $pink:       #f672a7;
 $red:        #f06548;
