Pages and Images

--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,57 @@
   font-size: 13px!important;
 
 }
+.nav-success.nav-tabs-custom .nav-link.active {
+  background-color: transparent!important;
+}
+.modal-content {
+  border: none !important;
+}
+@media only screen and (max-width:1024px) and (min-width:660px) {
+  .bachImage {
+    bottom: -13% !important;
+    left: -35px !important;
+    /* width: 40% !important; */
+  }
+  .fredericImage{
+    bottom: 0px !important;
+    left: 20% !important;
+    /* width: 45% !important; */
+  }
+  .boulangerImage{
+    bottom: -20% !important;
+    right: 18% !important;
+    /* width: 45% !important; */
+  }
+  .mozartImage{
+    bottom: -20% !important;
+    right: -2% !important;
+    /* width: 45% !important; */
+  }
+}
+@media only screen and (max-width:659px) 
+ {
+  .ComposerMainSection{
+    height: 70vh !important;
+  }
+  .bachImage {
+    bottom: -10% !important;
+    left: -45px !important;
+    width: 40% !important;
+  }
+  .fredericImage{
+    bottom: 0px !important;
+    left: 16% !important;
+    width: 45% !important;
+  }
+  .boulangerImage{
+    bottom: -15% !important;
+    right: 12% !important;
+    width: 45% !important;
+  }
+  .mozartImage{
+    bottom: -15% !important;
+    right: -8% !important;
+    width: 45% !important;
+  }
+}
