--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@
 }
 .modal-content {
   border: none !important;
+  background-color: transparent!important;
 }
 @media only screen and (max-width:1024px) and (min-width:660px) {
   .bachImage {
@@ -167,4 +168,10 @@
     right: -8% !important;
     width: 45% !important;
   }
+}
+.Learn{
+  background-color: transparent !important;
+  padding:0 !important;
+  margin-bottom: 15px;
+  margin-right: 10px;
 }
