--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.cdnfonts.com/css/super-bubble');
+@import url('https://fonts.cdnfonts.com/css/minion-pro');
+@import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
+
+.super-bubble{
+  font-family: 'Super Bubble', sans-serif !important;
+}
+.minion-pro{
+  font-family: 'Minion Pro', sans-serif !important;
+  font-weight: 400 !important;
+}
+.helvetica{
+  font-family: 'Helvetica Neue', sans-serif !important;
+}
+
 .glosarry-tabs-wrapper .nav-success.nav-tabs-custom .nav-link.active::after{
   background-color: rgb(0,159,227) !important;
 }
