--- a/src/App.css
+++ b/src/App.css
@@ -140,22 +140,22 @@
   .bachImage {
     bottom: -13% !important;
     left: -35px !important;
-    /* width: 40% !important; */
+    width: 40% !important;
   }
   .fredericImage{
     bottom: 0px !important;
     left: 20% !important;
-    /* width: 45% !important; */
+    width: 45% !important;
   }
   .boulangerImage{
-    bottom: -20% !important;
-    right: 18% !important;
-    /* width: 45% !important; */
+    bottom: -15% !important;
+    right: 10% !important;
+    width: 45% !important;
   }
   .mozartImage{
-    bottom: -20% !important;
-    right: -2% !important;
-    /* width: 45% !important; */
+    bottom: -15% !important;
+    right: -8% !important;
+    width: 45% !important;
   }
 }
 @media only screen and (max-width:659px) 
