--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,12 @@
   border: none !important;
   background-color: transparent!important;
 }
+/* .modal-backdrop-dark{
+  --vz-backdrop-opacity: 0.9 !important;
+} */
+.fade.modal-backdrop.modal-backdrop-dark.show{
+  opacity: 0.9;
+ }
 @media only screen and (max-width:1024px) and (min-width:660px) {
   .bachImage {
     bottom: -13% !important;
