--- a/src/App.css
+++ b/src/App.css
@@ -258,14 +258,14 @@ input[type=range]::-webkit-slider-thumb {
 
 .progress {
   height: 100%;
-  background: #007bff;
+  background: #F4E72E;
   width: 0;
   transition: width 0.1s linear;
 }
 
 .tag {
   position: absolute;
-  top: -5px;
+  top: -10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -274,31 +274,19 @@ input[type=range]::-webkit-slider-thumb {
 
 .tag-text {
   position: relative;
-  top: 10px;
-  font-size: 10px;
+  top: 25px;
   color: #555;
   white-space: nowrap;
   text-align: center;
 }
-
+.tag-text:hover{
+  color: #F4E72E;
+}
 .controls {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
-}
-
-.play-pause-btn {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.play-pause-btn:hover {
-  background-color: #0056b3;
 }
 
 .time-display {
